--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
       "express": "2.4.3",
       "ejs": ">= 0.4.3",
       "mongoose": ">= 2.4.1",
-      "socket.io": ">=0.7.7"
+      "socket.io": ">=0.7.7",
+      "konphyg": ">=1.0.4"
   }
 }
