--- a/.htaccess
+++ b/.htaccess
@@ -492,8 +492,8 @@ AddCharset utf-8 .css .js .xml .json .rss .atom
 
 # php_flag register_globals Off
 
-# Rename session cookie to something else, than PHPSESSID
-# php_value session.name sid
+# Rename session-konphyg cookie to something else, than PHPSESSID
+# php_value session-konphyg.name sid
 
 # Do not show you are using PHP
 # Note: Move this line to php.ini since it won't work in .htaccess
