--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
       "socket.io": ">=0.7.7",
       "konphyg": ">=1.0.4",
       "connect" : "2.x",
-      "session-konphyg": ">=0.0.1"
+      "session-konphyg": ">=0.0.1",
+      "consolidate": ">=0.3.0",
+      "dust": "*",
+      "dustjs-linkedin": "*"
   }
 }
