--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
     "name": "node-plates"
-  , "version": "0.1.1"
+  , "version": "0.1.4"
   , "description": "node.js boilerplate using express, socket.io, mongooose, jquery.mobile & html 5"
   , "keywords": ["node.js", "boilerplate"]
   , "author": "Andrew Keig <andrew.keig@gmail.com>"
   , "repository": { "type": "git", "url": "git@github.com:AndrewKeig/node-plates.git" }
   , "main": "./server.js"
   , "dependencies": {
-      "express": "2.4.3",
-      "mongoose": ">= 2.4.1",
-      "socket.io": ">=0.7.7",
-      "konphyg": ">=1.0.4",
-      "connect" : "2.x",
-      "session-konphyg": ">=0.0.1",
-      "consolidate": ">=0.3.0",
+      "express": "3.0.0alpha1",
+      "mongoose": "2.7.2",
+      "socket.io": "0.8.7",
+      "konphyg": "1.0.5",
+      "connect" : "1.8.3",
+      "session-konphyg": "0.0.2",
+      "consolidate": "0.4.0",
       "dust": "*",
       "dustjs-linkedin": "*"
   }
