--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "node-plates"
-  , "version": "0.1.5"
+  , "version": "0.1.6"
   , "description": "node.js boilerplate using express, socket.io, mongooose, jquery.mobile & html 5"
   , "keywords": ["node.js", "boilerplate"]
   , "author": "Andrew Keig <andrew.keig@gmail.com>"
@@ -16,6 +16,7 @@
       "session-konphyg": "0.0.2",
       "consolidate": "0.4.0",
       "dust": "*",
-      "dustjs-linkedin": "*"
+      "dustjs-linkedin": "*",
+      "underscore" : "*"
   }
 }
