--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
       "socket.io": "0.8.7",
       "konphyg": "1.0.5",
       "connect" : "1.8.3",
-      "session-konphyg": "0.0.2",
+      "connect-mongo" : "0.1.7",
+      "session-konphyg": "0.0.3",
+      "enquire": "0.0.1",
+      "nstore" : "0.5.1"
       "consolidate": "0.4.0",
       "dust": "*",
       "dustjs-linkedin": "*",
