--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
   , "repository": { "type": "git", "url": "git@github.com:AndrewKeig/node-plates.git" }
   , "main": "./server.js"
   , "dependencies": {
-      "express": "3.0.0alpha1",
+      "express": "3.x",
       "mongoose": "2.7.2",
-      "commander": "1.0.1",
-      "socket.io": "0.8.7",
-      "konphyg": "1.0.5",
+      "commander": "1.1.1",
+      "socket.io": "0.9",
+      "konphyg": "1.2.0",
       "connect" : "1.8.3",
-      "connect-mongo" : "0.1.7",
+      "connect-mongo" : "0.2.0",
       "session-konphyg": "0.0.3",
       "enquire": "0.0.2",
       "nstore" : "0.5.1",
-      "consolidate": "0.4.0",
+      "consolidate": "0.5.0",
       "dust": "*",
       "dustjs-linkedin": "*",
       "underscore" : "*"
